<resources>
    <string name="app_name">Teleprompter</string>
    <string name="blind_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui.</string>
    <string name="button_start">Play</string>
    <string name="button_startType">Create new document</string>
    <string name="delete">Delete</string>
    <string name="settings_hint">Use settings to personalize your text display</string>
    <string name="teletext_hint">Type your script here</string>
    <string name="teletext_title_hint">File Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_teleprompter">TeleprompterActivity</string>
    <string name="button_preview">Preview</string>
    <string name="type_activity">New File</string>
    <string name="empty_list">No documents. Create a new one.</string>
    <string name="title_for_empty_view">No old documents</string>
    <string name="text_for_empty_view">Create a new one</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4895784033560952/3462060420</string>
    <string name="dialog_message">Are you sure you want to delete this document?</string>
    <string name="cancel">Cancel</string>
    <string name="toast">Document Deleted!</string>
    <string name="display">Display</string>
    <string name="mirror_title">Mirror</string>
    <string name="mirror_content">Mirror the display script</string>
    <string name="font_title">Font Size</string>
    <string name="font_content">Set the font Size</string>
    <string name="font">Font</string>
    <string name="font_select">Select a font type</string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="scroll_speed_content">1 (slowest) to 100 (fastest)</string>
    <string name="colors">colors</string>
    <string name="background_color">Background color</string>
    <string name="background_color_content">Select a background color</string>
    <string name="text_color">Text color</string>
    <string name="text_color_content">Select a text color</string>
</resources>
