<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TypeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_layout_app_bar_height"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_type"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/material_layout_keylines_screen_edge_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teletext_title_hint">

                <EditText
                    android:id="@+id/teletext_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/teletext_title_hint"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/teletext"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:hint="@string/teletext_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:gravity="center">



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/delete"
                    android:onClick="deleteDocument"
                    android:layout_gravity="start"
                    android:text="@string/delete"
                    android:padding="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:elevation="40dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/material_light_white"
                    style="@android:style/ButtonBar" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_start"
                    android:onClick="startPrompter"
                    android:layout_gravity="end"
                    android:text="@string/button_start"
                    android:padding="5dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/material_light_white"
                    style="@android:style/ButtonBar" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>